# MacResizeLoop

./: CMakeLists.txt
CocoaApp/: CMakeLists.txt  main.mm
MetalApp/: CMakeLists.txt  main.mm
